@@ -32,9 +32,9 @@
     <artifactId>org.apache.felix.scr</artifactId>
     <version>2.1.0-SNAPSHOT</version>
     <scm>
-        <connection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr</developerConnection>
-        <url>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/scr</url>
+        <connection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/osgi-r7/scr</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/osgi-r7/scr</developerConnection>
+        <url>scm:svn:https://svn.apache.org/repos/asf/felix/trunk/osgi-r7/scr</url>
     </scm>
     
     <!--
